--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,12 @@
     <string name="oeefx">D09</string>
     <string name="zybz">D10</string>
 
+    <!--系统参数设置-->
+    <!--多久检测一次App版本信息，（单位：5秒）-->
+    <string name="update_app_delay_time">720</string>
+    <!--多久上传一次Gpio采集到的信号（毫秒）-->
     <string name="gpio_update_time">10000</string>
+    <!--多久更新一次主页面数据（毫秒）-->
     <string name="base_info_update_time">60000</string>
     <!--<string name="service_ip">http://192.168.2.121</string>-->
     <string name="service_ip">http://192.168.0.201:8080</string>
