第三页Pdf更新

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="zlmc_69"></string>
     <string name="zlmc_70"></string>
     <string name="zlmc_F3">结束</string>
-    <string name="zlmc_x">人员上岗</string>
+    <string name="zlmc_x">上岗/转岗</string>
     <string name="zlmc_xj">品质巡机</string>
 
     <string name="sbxx">D01</string>
